--- a/SWAGLibrary/Base.lproj/Main.storyboard
+++ b/SWAGLibrary/Base.lproj/Main.storyboard
@@ -32,7 +32,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="75"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="l3O-j6-OyE" id="U1G-ir-Kdh">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="74.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="74"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Slouching Towards Bethlehem" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Bg-GI-EMJ">
@@ -633,7 +633,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="  Book" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="x0E-Uc-3uy">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="  Title" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="x0E-Uc-3uy">
                                 <rect key="frame" x="16" y="193" width="326.5" height="53.5"/>
                                 <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="0.6151273544520548" colorSpace="calibratedRGB"/>
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
@@ -705,11 +705,23 @@
                                     <action selector="cancelTapped:" destination="IP6-Aj-cuQ" eventType="touchUpInside" id="SF7-wM-Kjz"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Book" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hmi-hH-Na7">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hmi-hH-Na7">
                                 <rect key="frame" x="16" y="160" width="135" height="28"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please add author " lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="09f-kw-XKc">
+                                <rect key="frame" x="111" y="259" width="225" height="28"/>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="15"/>
+                                <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="highlightedColor" red="0.20000000300000001" green="0.20000000300000001" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please add title " lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bFL-gX-LJU">
+                                <rect key="frame" x="111" y="160" width="225" height="28"/>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="15"/>
+                                <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="highlightedColor" red="0.20000000300000001" green="0.20000000300000001" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -722,14 +734,19 @@
                             <constraint firstItem="qZz-5f-Bxz" firstAttribute="height" secondItem="doo-h5-X08" secondAttribute="height" multiplier="0.07" id="9px-UD-100"/>
                             <constraint firstItem="eVX-LD-Vv2" firstAttribute="height" secondItem="Hmi-hH-Na7" secondAttribute="height" id="9vA-0l-Ead"/>
                             <constraint firstItem="dYj-WY-XeN" firstAttribute="height" secondItem="x0E-Uc-3uy" secondAttribute="height" id="Bbn-m9-pnv"/>
+                            <constraint firstItem="bFL-gX-LJU" firstAttribute="leading" secondItem="Hmi-hH-Na7" secondAttribute="trailing" constant="-40" id="COf-A4-eXz"/>
                             <constraint firstItem="cA8-hK-ybt" firstAttribute="width" secondItem="doo-h5-X08" secondAttribute="width" id="CX0-0G-uGJ"/>
                             <constraint firstItem="juQ-gO-iab" firstAttribute="leading" secondItem="x0E-Uc-3uy" secondAttribute="leading" id="Cmr-RF-oEH"/>
                             <constraint firstAttribute="leadingMargin" secondItem="NtY-2i-901" secondAttribute="leading" id="DVL-bt-AIF"/>
                             <constraint firstItem="Hmi-hH-Na7" firstAttribute="leading" secondItem="qZz-5f-Bxz" secondAttribute="leading" id="FCg-dV-29c"/>
                             <constraint firstItem="RrN-9B-L2C" firstAttribute="height" secondItem="Hmi-hH-Na7" secondAttribute="height" id="Fhn-Jf-sqq"/>
+                            <constraint firstItem="09f-kw-XKc" firstAttribute="top" secondItem="eVX-LD-Vv2" secondAttribute="top" id="G2M-ne-7Z7"/>
+                            <constraint firstItem="bFL-gX-LJU" firstAttribute="height" secondItem="Hmi-hH-Na7" secondAttribute="height" id="G3j-lh-3HF"/>
                             <constraint firstItem="x0E-Uc-3uy" firstAttribute="width" secondItem="doo-h5-X08" secondAttribute="width" multiplier="0.87" id="G5e-Lb-GA0"/>
                             <constraint firstItem="x0E-Uc-3uy" firstAttribute="height" secondItem="doo-h5-X08" secondAttribute="height" multiplier="0.08" id="G7U-RN-BTz"/>
+                            <constraint firstItem="09f-kw-XKc" firstAttribute="width" secondItem="bFL-gX-LJU" secondAttribute="width" id="HHz-ze-Ib1"/>
                             <constraint firstItem="NtY-2i-901" firstAttribute="top" secondItem="Omq-27-6jc" secondAttribute="bottom" constant="8" id="I0p-UA-TPl"/>
+                            <constraint firstItem="09f-kw-XKc" firstAttribute="leading" secondItem="bFL-gX-LJU" secondAttribute="leading" id="Ibs-rE-zXV"/>
                             <constraint firstItem="eVX-LD-Vv2" firstAttribute="width" secondItem="doo-h5-X08" secondAttribute="width" multiplier="0.18" id="OK0-kc-YUX"/>
                             <constraint firstItem="qZz-5f-Bxz" firstAttribute="top" secondItem="NtY-2i-901" secondAttribute="bottom" constant="32.5" id="Oue-xf-UgH"/>
                             <constraint firstItem="qZz-5f-Bxz" firstAttribute="width" secondItem="doo-h5-X08" secondAttribute="width" multiplier="0.9" id="RWY-hT-PF1"/>
@@ -749,8 +766,11 @@
                             <constraint firstItem="eVX-LD-Vv2" firstAttribute="top" secondItem="x0E-Uc-3uy" secondAttribute="bottom" constant="12.5" id="gTl-pD-Feh"/>
                             <constraint firstItem="dYj-WY-XeN" firstAttribute="width" secondItem="x0E-Uc-3uy" secondAttribute="width" id="j0P-ze-keR"/>
                             <constraint firstItem="NtY-2i-901" firstAttribute="width" secondItem="doo-h5-X08" secondAttribute="width" multiplier="0.18" id="lff-11-TG3"/>
+                            <constraint firstItem="09f-kw-XKc" firstAttribute="height" secondItem="bFL-gX-LJU" secondAttribute="height" id="luB-F1-C0B"/>
                             <constraint firstItem="RrN-9B-L2C" firstAttribute="leading" secondItem="Hmi-hH-Na7" secondAttribute="leading" id="n71-fY-jmE"/>
+                            <constraint firstItem="bFL-gX-LJU" firstAttribute="width" secondItem="doo-h5-X08" secondAttribute="width" multiplier="0.6" id="nb5-YT-RtD"/>
                             <constraint firstItem="lE9-An-XmT" firstAttribute="height" secondItem="x0E-Uc-3uy" secondAttribute="height" id="oX1-Nw-T8R"/>
+                            <constraint firstItem="bFL-gX-LJU" firstAttribute="top" secondItem="Hmi-hH-Na7" secondAttribute="top" id="pRa-Cj-cMV"/>
                             <constraint firstItem="cA8-hK-ybt" firstAttribute="height" secondItem="Hmi-hH-Na7" secondAttribute="height" id="tm5-cc-9bR"/>
                             <constraint firstItem="Hmi-hH-Na7" firstAttribute="height" secondItem="qZz-5f-Bxz" secondAttribute="height" multiplier="0.6" id="uGl-6j-esK"/>
                             <constraint firstItem="RrN-9B-L2C" firstAttribute="width" secondItem="doo-h5-X08" secondAttribute="width" multiplier="0.25" id="uLx-Nm-ArL"/>
@@ -761,6 +781,8 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="addAuthorLabel" destination="09f-kw-XKc" id="N5y-pa-CTL"/>
+                        <outlet property="addTitleLabel" destination="bFL-gX-LJU" id="WNb-Qf-XFT"/>
                         <outlet property="authorField" destination="juQ-gO-iab" id="lQO-V6-J4Z"/>
                         <outlet property="bookField" destination="x0E-Uc-3uy" id="AUI-Lg-zKK"/>
                         <outlet property="categoriesField" destination="lE9-An-XmT" id="byR-F4-ssh"/>
